fix: quality - rimossi import inutilizzati, System.out→Logger, equals/hashCode ProdottoInventario, costanti SQL, metodo astratto Ruolo, NPE guard su getRuolo (gate SonarCloud)